--- a/sass/includes/_trabalho.sass
+++ b/sass/includes/_trabalho.sass
@@ -213,3 +213,11 @@
 
     .next
       +position(absolute, null, 20px, 15px, null)
+
+@-moz-document url-prefix()
+  #myModal
+    .modal-body
+      .desc
+        br
+          display: block
+          margin-top: 15px
